- simplify generic interface for tensor - introduce storage for tensors as a mean to indirection